# Synch.Live

./: .gitignore  README.md
python/: MANIFEST.in  Test-positions-downsampling.ipynb  pyproject.toml  requirements.txt  setup.py  shell.nix
python/camera/: README.md  config.yml  requirements.txt  server.py  tracking.py
python/camera/config/: ICGH.yml  ICGH_testing.yml  QMULGH.yml  default.yml  generic-camera.yml
python/camera/core/: detection.py  emergence.py  motion_model.py  tracking.py
python/camera/server/: local.py  observer.py  server.py  video.py
python/camera/server/templates/: calibrate.html  index.html  observe.html
python/camera/templates/: calibrate.html
python/camera/tools/: colour.py  config.py  traj_fitness.py  trajectories.py
python/instance/: video_config.yml
python/leds/: README.md  experiment.py  headset.py  ledcontrol.py  mockloop.py  requirements.txt  startup.py  stop.py  wait.py  ws2801_headset.py
python/leds/server/: README.md  server.py
python/leds/server/static/: hat_standalone.css  hat_standalone_script.js  style.css
python/leds/server/templates/: hat_standalone.css  hat_standalone.html  hat_standalone_script.js  layout.html  main.html
python/synch_live/camera/: README.md  requirements.txt
python/synch_live/camera/config/: ICGH.yml  default.yml
python/synch_live/camera/core/: detection.py  emergence.py  logger.py  tracking.py
python/synch_live/camera/db/: README.md  __init__.py
python/synch_live/leds/: README.md  experiment.py  headset.py  mockloop.py  startup.py  stop.py  wait.py  ws2801_headset.py
(+120 files in other folders)
