[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "synch-live"
version = "0.0.1"
dependencies = [
    "click~=8.1.3",
    "Flask~=2.2.2",
    "imutils~=0.5.4",
    "jpype1~=1.4",
    "matplotlib~=3.6.3",
    "numpy~=1.21.2",
    "opencv-contrib-python~=4.5.5.64",
    "pykalman~=0.9.5",
    "pyyaml~=6.0",
    "scipy~=1.7.3",
    "ansible~=7.2",
    "ansible-runner~=2.3",
    "wtforms~=3.0",
    "aiohttp~=3.8",
    "asyncio~=3.4",
]
requires-python = "~=3.10.9"
